<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2024-2026 the original author or authors.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.agentscope</groupId>
        <artifactId>agentscope-examples</artifactId>
        <version>${revision}</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <groupId>io.agentscope.examples</groupId>
    <artifactId>documentation</artifactId>
    <packaging>jar</packaging>

    <name>AgentScope Java - Examples - Documentation</name>
    <description>Examples demonstrating usage of AgentScope 2.0 APIs</description>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.deploy.skip>true</maven.deploy.skip>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!--
              Declare the Elasticsearch Java client version explicitly and place it
              before the Spring Boot BOM so it overrides the version managed by Spring Boot.
            -->
            <dependency>
                <groupId>co.elastic.clients</groupId>
                <artifactId>elasticsearch-java</artifactId>
                <version>9.3.3</version>
            </dependency>

            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- AgentScope Core -->
        <dependency>
            <groupId>io.agentscope</groupId>
            <artifactId>agentscope-harness</artifactId>
        </dependency>

        <!-- DashScope model implementation and MultiModalTool -->
        <dependency>
            <groupId>io.agentscope</groupId>
            <artifactId>agentscope-extensions-model-dashscope</artifactId>
        </dependency>

        <!-- RAG Extensions -->
        <dependency>
            <groupId>io.agentscope</groupId>
            <artifactId>agentscope-extensions-rag-dify</artifactId>
        </dependency>

        <dependency>
            <groupId>io.agentscope</groupId>
            <artifactId>agentscope-extensions-rag-ragflow</artifactId>
        </dependency>

        <dependency>
            <groupId>io.agentscope</groupId>
            <artifactId>agentscope-extensions-higress</artifactId>
        </dependency>

        <dependency>
            <groupId>io.agentscope</groupId>
            <artifactId>agentscope-extensions-rag-haystack</artifactId>
        </dependency>

        <!-- Simple RAG Extension (includes PgVectorStore, DashScopeTextEmbedding, etc.) -->
        <dependency>
            <groupId>io.agentscope</groupId>
            <artifactId>agentscope-extensions-rag-simple</artifactId>
        </dependency>

        <dependency>
            <groupId>io.agentscope</groupId>
            <artifactId>agentscope-extensions-rag-bailian</artifactId>
        </dependency>

        <dependency>
            <groupId>io.agentscope</groupId>
            <artifactId>agentscope-extensions-mem0</artifactId>
        </dependency>

        <dependency>
            <groupId>io.agentscope</groupId>
            <artifactId>agentscope-extensions-reme</artifactId>
        </dependency>

        <dependency>
            <groupId>io.agentscope</groupId>
            <artifactId>agentscope-extensions-memory-bailian</artifactId>
        </dependency>

        <dependency>
            <groupId>io.agentscope</groupId>
            <artifactId>agentscope-extensions-studio</artifactId>
        </dependency>
        <dependency>
            <groupId>io.agentscope</groupId>
            <artifactId>agentscope-extensions-model-openai</artifactId>
        </dependency>
        <dependency>
            <groupId>io.agentscope</groupId>
            <artifactId>agentscope-extensions-model-anthropic</artifactId>
        </dependency>
        <dependency>
            <groupId>io.agentscope</groupId>
            <artifactId>agentscope-extensions-model-gemini</artifactId>
        </dependency>

        <!-- Git-based Skill Repository -->
        <dependency>
            <groupId>io.agentscope</groupId>
            <artifactId>agentscope-extensions-skill-git-repository</artifactId>
        </dependency>

        <!-- aistio Data Plane SDK (for Service registration) -->
        <dependency>
            <groupId>io.agentscope</groupId>
            <artifactId>agentscope-extensions-aistio</artifactId>
        </dependency>

        <!-- Redis State Store (for distributed shared-store examples) -->
        <dependency>
            <groupId>io.agentscope</groupId>
            <artifactId>agentscope-extensions-redis</artifactId>
        </dependency>

        <!-- PostgreSQL Driver for PgVectorStore -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
        </dependency>

        <!-- PGvector JDBC Extension -->
        <dependency>
            <groupId>com.pgvector</groupId>
            <artifactId>pgvector</artifactId>
        </dependency>

        <!-- Spring Boot Web (for REST controller examples) -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!-- Spring Boot WebFlux (for SSE streaming examples) -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>

        <!-- Lombok for boilerplate reduction in examples -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Declared without executions so the spring-boot:run prefix resolves; the default lifecycle is unaffected -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring.boot.version}</version>
            </plugin>
        </plugins>
    </build>
</project>
